2005-08-04  Sam Steingold  <sds@gnu.org>

	make configure creation process more robust
	* Makefile.devel (MODULES, MOD_CONFIGURES, MOD_CONFIG_H_IN)
	(CLISP_CONFIGURES, FFCALL, FFCALL_CONFIGURES): new variables
	(CONFIGURES, CONFIG_H_IN): use them
	(src/autoconf/aclocal.m4): depend only on CLISP_CONFIGURES

2005-08-04  Sam Steingold  <sds@gnu.org>

	updated bundled regex to the latest gnulib version
	* configure.in: call gl_USE_SYSTEM_EXTENSIONS
	* modules/regexp/configure.in: use gl_INCLUDED_REGEX instead of
	CL_REGEXP; do not call AC_AIX (done by toplevel)
	* modules/wildcard/configure.in: do not call AC_AIX (done by toplevel)
	* modules/regexp/regex.c, modules/regexp/regex.h: updated
	* modules/regexp/regex_internal.c, modules/regexp/regex_internal.h:
	* modules/regexp/regexec.c, modules/regexp/regcomp.c:
	* m4/extensions.m4, m4/onceonly.m4, m4/regex.m4: added
	* m4/regexp.m4: removed
	* modules/regexp/link.sh.in: remove all gnulib regex files when
	using the system-wide regex implementation
	* modules/syscalls/calls.c: do not define __EXTENSIONS__, this is
	taken care of by gl_USE_SYSTEM_EXTENSIONS

2005-08-04  Sam Steingold  <sds@gnu.org>

	* modules/fastcgi/configure.in, modules/oracle/configure.in:
	generate config.h

2005-08-03  Sam Steingold  <sds@gnu.org>

	* makemake.in (check): fixed the test for sacla-tests and ansi-tests

2005-08-03  Sam Steingold  <sds@gnu.org>

	* spvw_memfile.d (loadmem): add a cast for C++ compilation

2005-08-03  Sam Steingold  <sds@gnu.org>

	* documentation.lisp (function-documentation):
	pass NAME, not X, to SYS::GET-FUNNAME-SYMBOL

2005-08-03  Sam Steingold  <sds@gnu.org>

	* defs1.lisp (decode-universal-time) [!(UNIX|WIN32)]:
	call FLOOR just once instead of twice

2005-08-02  Sam Steingold  <sds@gnu.org>

	* encoding.d (init_dependent_encodings, SET-FOREIGN-ENCODING):
	partially reversed the 2005-07-30 patch: O(foreign_8bit_encoding)
	must agree with O(foreign_encoding) and only ASCII agrees with